# ishell

./: .gitignore  BUILD.md  BUILD_MACOS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  RELEASE.md  build.rs
.cargo/: config.toml
.cursor/rules/: auto-commit.mdc
.github/workflows/: linux.yml  macos.yml  release.yml  windows.yml
assets/linux/: iShell.desktop  install.sh  ishell.desktop
assets/macos/: Info.plist
docs/: optimize_screenshots.sh
scripts/: bump-version.sh  install-mcp.sh
src/: app.rs  i18n.rs  limits.rs  main.rs  mcp_protocol.rs  proto.rs  store.rs  textcodec.rs  theme.rs  version.rs
src/app/: demo_init.rs  dialogs.rs  doc_parse.rs  doc_view.rs  editor_close.rs  editor_win.rs  editor_window_view.rs  file_actions.rs  frame.rs  frame_editor.rs  layout.rs  layout_body.rs  layout_tabs.rs  mcp_bridge.rs  mod.rs  pending.rs  screenshot.rs  session.rs  session_events.rs  transfers.rs  transfers_clipboard.rs  transfers_direct.rs  transfers_relay.rs  types.rs  util.rs  view_state.rs  widgets.rs  windows.rs
src/app/windows/: forward.rs  image.rs  mod.rs  popups.rs  toast.rs  transfer.rs
src/local/: files.rs  mod.rs  sys.rs
src/ssh/: auth.rs  commands.rs  forward.rs  mod.rs  sftp.rs  sftp_list.rs  sftp_read.rs  sftp_write.rs  sysinfo.rs  xfer.rs
src/ssh/xfer/: direct.rs  download.rs  download_io.rs  mod.rs  upload.rs  util.rs
src/store/: connections.rs  crypto.rs  favorites.rs  mod.rs  paths.rs  settings.rs  snippets.rs
src/terminal/: default.rs  feed.rs  input.rs  keys.rs  mod.rs  osc.rs  paint.rs  search.rs  selection.rs  terminal_tests.rs  theme.rs  ui_paint.rs  vt.rs
src/ui/: connect.rs  docx.rs  docx_parse.rs  docx_render.rs  editor.rs  file_panel.rs  highlight.rs  mod.rs  sidebar.rs
src/ui/connect/: dialogs.rs  form.rs  form_view.rs  form_widgets.rs  list_view.rs  mod.rs  ui.rs
src/ui/editor/: find.rs  mod.rs  virtual_.rs
src/ui/editor/virtual_/: chrome.rs  commands.rs  edit.rs  fold.rs  geom.rs  input.rs  mod.rs  paint.rs  view.rs  wrap.rs
src/ui/editor/virtual_/paint/: gutter.rs  mod.rs  overlays.rs  text.rs
src/ui/file_panel/: dialogs.rs  file_panel_tests.rs  ime.rs  list.rs  mod.rs  tree.rs  types.rs
src/ui/file_panel/list/: helpers.rs  mod.rs  table.rs  table_rows.rs  table_selection.rs  table_tail.rs  toolbar.rs
src/ui/highlight/: indent.rs  lang.rs  lang_keywords.rs  lint.rs  mod.rs  token.rs
src/ui/sidebar/: history.rs  mod.rs  processes.rs  widgets.rs
