[package]
name = "ishell"
version = "0.1.0"
edition = "2021"
description = "现代化 Rust SSH 客户端，仿 FinalShell 布局（系统信息 + 终端 + SFTP 文件管理）"

[dependencies]
# GUI（GPU 渲染的即时模式框架）。仅保留原生所需特性：glow 渲染 + 默认字体 + x11/wayland，
# 去掉 accesskit(a11y)、web 屏幕阅读、persistence 等，缩减体积（本应用自管配置持久化）。
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "wayland", "x11"] }
egui = "0.34"
egui_extras = "0.34"  # 表格 + 轻量代码高亮（不启用 syntect，避免常驻大内存）
egui-phosphor = "0.12" # 图标字体（对应 egui 0.34）
ttf-parser = "0.25"    # 解析 CJK 字体集合，挑出等宽（Mono）字面用于终端

# 原生文件选择器：按平台选择后端（见文件底部 target 段）

# 异步运行时（SSH 后台线程）
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "fs"] }

# SSH 协议栈 + SFTP
# 用 ring 加密后端替代默认的 aws-lc-rs，去掉 aws-lc-sys 的 C/cmake 依赖，跨平台编译更省事；
# 保留 flate2（压缩）与 rsa（RSA 私钥支持）。
russh = { version = "0.61", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2.3"

# 终端模拟（VT100 屏幕模型）
vt100 = "0.16"

# 剪贴板读取（终端右键粘贴 / Ctrl+Shift+V）
arboard = "3"

# 连接配置持久化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 已保存密码的本地加密（at-rest）
chacha20poly1305 = "0.10"
base64 = "0.22"
getrandom = "0.2"
# 系统钥匙串（存放加密主密钥）：Linux Secret Service / macOS Keychain / Windows 凭据管理器；
# 不可用时回退到本地 key 文件。zbus 已被其它依赖引入，增量体积有限。
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "async-secret-service", "async-io", "crypto-rust"] }

# 看图工具 + 自检截图：仅启用少数常见格式的纯 Rust 解码器以控制体积（不含 webp 等较大依赖）
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }

# 文件夹压缩下载：远端 tar.gz 打包后下载，本地用纯 Rust 解包（不依赖系统 tar）
tar = "0.4"
flate2 = "1"

# 工具
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# Linux：xdg-portal 纯 Rust 文件选择器（免 GTK）；libc 用于 malloc_trim 归还内存
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
rfd = { version = "0.17", default-features = false, features = ["xdg-portal", "pollster"] }

# 非 Linux（macOS / Windows）：使用 rfd 原生后端
[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = "0.17"

# Windows：把 .ico 嵌入 exe，使资源管理器/任务栏在文件上显示 logo 图标
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "s"   # 优化体积（GUI 仅事件驱动重绘，活跃渲染影响可忽略）
lto = true        # fat LTO：更激进的跨 crate 内联与死代码消除
codegen-units = 1
strip = true
# 保留 panic = unwind：某个传输/worker 任务 panic 不至于整应用崩溃
